--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/x-date-pickers": "^6.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "appwrite": "^13.0.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
     "es6-shim": "^0.35.8",
