--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
