--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.18.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "appwrite": "^13.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
@@ -21,9 +18,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
-    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
@@ -50,5 +45,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "@types/react-helmet": "^6.1.9",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   }
 }
