--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draft-js": "^0.11.7",
     "es6-shim": "^0.35.8",
     "formik": "^2.4.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
