--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
     "es6-shim": "^0.35.8",
+    "firebase": "^10.7.0",
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
