--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.8",
     "@types/react-helmet": "^6.1.9",
+    "jest-mock-extended": "^3.0.5",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
